[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MapEdit.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MapDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Icons/MouseRightClick.png" type="Texture" id=3]
[ext_resource path="res://Icons/MouseScrollWheel.png" type="Texture" id=4]
[ext_resource path="res://Icons/MouseLeftClick.png" type="Texture" id=5]
[ext_resource path="res://EditorTheme/PanelContainerForeground.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.141176, 0.14902, 0.188235, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.109804, 0.113725, 0.14902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="MapEdit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.133333, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelectContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RoomSelectContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="PanelContainer" type="MarginContainer" parent="RoomSelectContainer/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 26.0
custom_constants/margin_left = -4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="RoomSelectContainer/VBoxContainer/PanelContainer"]
margin_left = -4.0
margin_right = 1008.0
margin_bottom = 22.0

[node name="PackageMenuButton" type="MenuButton" parent="RoomSelectContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 63.0
margin_bottom = 22.0
text = "Package"
items = [ "Test In-Game", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 1, 0, null, "", true, "Exit", null, 0, false, false, 2, 0, null, "", false ]

[node name="EditMenuButton" type="MenuButton" parent="RoomSelectContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 67.0
margin_right = 103.0
margin_bottom = 22.0
focus_mode = 2
text = "Edit"
items = [ "Undo", null, 0, false, false, 0, 0, null, "", false, "Redo", null, 0, false, false, 1, 0, null, "", false ]

[node name="MapEditContainer" type="PanelContainer" parent="RoomSelectContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 1008.0
margin_bottom = 584.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1003.0
margin_bottom = 549.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer"]
margin_right = 998.0
margin_bottom = 26.0
custom_constants/margin_bottom = 4

[node name="GameMapLabel" type="Label" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MarginContainer"]
margin_right = 998.0
margin_bottom = 22.0
text = "Game Map"
align = 1

[node name="MapRoomListSplitContainer" type="HSplitContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 998.0
margin_bottom = 544.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapContainer" type="PanelContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer"]
margin_right = 495.0
margin_bottom = 514.0
rect_clip_content = true
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="MapDisplay" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer" instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer"]
margin_left = 1.0
margin_top = 472.0
margin_right = 494.0
margin_bottom = 513.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer"]
margin_left = 93.0
margin_right = 400.0
margin_bottom = 41.0
size_flags_horizontal = 4
custom_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer"]
margin_right = 307.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.133333, 0.141176, 0.180392, 0.631373 )

[node name="MarginContainer" type="MarginContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer"]
margin_right = 307.0
margin_bottom = 33.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Control" type="GridContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 303.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 6

[node name="LeftMouseTexture" type="TextureRect" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_right = 16.0
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMouseLabel" type="Label" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 20.0
margin_top = 1.0
margin_right = 120.0
margin_bottom = 23.0
text = "Select Room   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WheelTexture" type="TextureRect" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 124.0
margin_right = 140.0
margin_bottom = 25.0
texture = ExtResource( 4 )

[node name="WheelLabel" type="Label" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 144.0
margin_top = 1.0
margin_right = 201.0
margin_bottom = 23.0
text = "Zoom   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMouseTexture" type="TextureRect" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 205.0
margin_right = 221.0
margin_bottom = 25.0
texture = ExtResource( 3 )

[node name="RightMouseLabel2" type="Label" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 225.0
margin_top = 1.0
margin_right = 299.0
margin_bottom = 23.0
text = "Move Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PackageNameSelectContainer" type="VBoxContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer"]
margin_left = 503.0
margin_right = 998.0
margin_bottom = 514.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer"]
margin_right = 495.0
margin_bottom = 22.0
columns = 2

[node name="SearchLevelNameEdit" type="LineEdit" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer/GridContainer"]
margin_right = 447.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = "Filter rooms..."

[node name="SearchLevelNameClearButton" type="Button" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer/GridContainer"]
margin_left = 451.0
margin_right = 495.0
margin_bottom = 22.0
text = "Clear"

[node name="LevelNameList" type="ItemList" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer"]
margin_top = 26.0
margin_right = 495.0
margin_bottom = 488.0
size_flags_vertical = 3
items = [ "m04ASD_000", null, false ]

[node name="VBoxContainer" type="VBoxContainer" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer"]
margin_top = 492.0
margin_right = 495.0
margin_bottom = 514.0

[node name="EditSelectedRoomButton" type="Button" parent="RoomSelectContainer/VBoxContainer/MapEditContainer/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer/VBoxContainer"]
margin_right = 495.0
margin_bottom = 22.0
text = "Edit Room"

[node name="LoadingStatusContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="LoadingStatusContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.12549, 0.133333, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingStatusLabel" type="Label" parent="LoadingStatusContainer"]
margin_left = 456.0
margin_top = 289.0
margin_right = 567.0
margin_bottom = 311.0
text = "Finding Levels..."
